Fixed map on mobile

--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -54,7 +54,7 @@
   width: 100%;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: map-get($breakpoints, lg)) {
   .sidebar-root {
     display: none !important;
   }
